# WordMatchGame

./: .gitignore  CMakeLists.txt  README.md  cpp课程设计报告.docx  member.cpp  member.h  player.cpp  player.h  tester.cpp  tester.h
Logistics_Management_System_V1.0/: CMakeLists.txt  admin.cpp  admin.h  main.cpp  mysqlManager.cpp  mysqlManager.h  package.cpp  package.h  user.cpp  user.h  util.cpp  util.h  view.cpp  view.h
Logistics_Management_System_V2.0/: .gitignore  admin.cpp  admin.h  main.cpp  mysqlManager.cpp  mysqlManager.h  package.cpp  package.h  postman.cpp  postman.h  user.cpp  user.h  util.cpp  util.h  view.cpp  view.h
WordMatchGameV1.0/: .gitignore  CMakeLists.txt  README.md  WordMatchGame.pro  addwordpage.cpp  addwordpage.h  addwordpage.ui  dbutil.cpp  dbutil.h  gamepage.cpp  gamepage.h  gamepage.ui  member.cpp  member.h  player.cpp  player.h  playerpage.cpp  playerpage.h  playerpage.ui  registration.cpp  registration.ui  searchpage.cpp  searchpage.h  searchpage.ui  tester.cpp  tester.h  testerpage.cpp  testerpage.h  testerpage.ui  widget.cpp  widget.h  widget.ui
WordMatchGameV1.0/src/: CMakeLists.txt  demo.cpp
WordMatchGameV2.0/: CMakeLists.txt  README.md  addwordpage.cpp  dbutil.cpp  gamepage.cpp  gamepage.h  member.cpp  member.h  registration.h  searchpage.cpp  searchpage.h  tester.cpp  tester.h
WordMatchGameV3.0/: .gitignore  README.md  demo.cpp
WordMatchGameV3.0/client/: CMakeLists.txt  README.md  addwordpage.cpp  addwordpage.h  battlepage.cpp  battlepage.h  battlepage.ui  battleselectpage.cpp  battleselectpage.h  battleselectpage.ui  client.pro  gamepage.cpp  gamepage.h  gamepage.ui  member.cpp  member.h  player.cpp  player.h  playerpage.cpp  playerpage.h  registration.cpp  registration.h  searchpage.cpp  searchpage.h  searchpage.ui  tester.cpp  tester.h  testerpage.cpp  testerpage.h  testerpage.ui  widget.cpp  widget.h  widget.ui
WordMatchGameV3.0/server/: .gitignore  CMakeLists.txt  dbutil.cpp  dbutil.h  main.cpp  mainwindow.cpp  mainwindow.h  myserver.cpp  myserver.h  mysocket.cpp  mysocket.h  mythread.cpp  mythread.h  server.pro
build-WordMatchGame-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.WordMatchGame.Debug  object_script.WordMatchGame.Release  ui_widget.h
build-WordMatchGame-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-WordMatchGame-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.38CEC13B77BC61C8.idx  QLabel.7A27DDD99251D7C8.idx  QObject.F5C9B4B5CB3C2980.idx  (+149 more)
